PyMaker/datas/object2/RawHTML/i14801/Python_DOC_referPages.query-works-in-psql-but-syntax-error-in-python-with-psycopg2.txt
<div class="post-text" itemprop="text">
<p>I have a query which works well in psql, but generates an error in my program: </p>
<pre><code>sql = 'SELECT id, x, y FROM table_name WHERE y NOT LIKE 'pa%' AND x IS NOT NULL;' 
cur.execute(sql)
</code></pre>
<p>Any pointers as to why it's not working? Or any suggestions, how I can fix it?</p>
</div>
<div class="post-text" itemprop="text">
<p>It is not about <code>PostgreSQL</code> vs <code>MySQL</code> query syntax - this is just syntactically wrong in Python:</p>
<pre><code>&gt;&gt;&gt; sql = 'SELECT id, x, y FROM table_name WHERE y NOT LIKE 'pa%' AND x IS NOT NULL;' 
  File "&lt;stdin&gt;", line 1
    sql = 'SELECT id, x, y FROM table_name WHERE y NOT LIKE 'pa%' AND x IS NOT NULL;' 
                                                              ^
SyntaxError: invalid syntax
</code></pre>
<p>Put the query into double quotes:</p>
<pre><code>sql = "SELECT id, x, y FROM table_name WHERE y NOT LIKE 'pa%' AND x IS NOT NULL;"
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The good practice for code strings in Python is the triple quoted string which makes it much clearer and can contain both single and double quotes:</p>
<pre><code>sql = '''
    SELECT id, x, y
    FROM table_name
    WHERE y NOT LIKE 'pa%' AND x IS NOT NULL;
'''
</code></pre>
<p>From the <a href="https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str" rel="nofollow">manual</a>:</p>
<blockquote>
<p>Triple quoted strings may span multiple lines - all associated whitespace will be included in the string literal.</p>
</blockquote>
</div>
<span class="comment-copy">I feel silly now, totally never thought of it. thanks.</span>
